fix: label & sidebar overflow issue

--- a/src/components/DisplayNote/note.css
+++ b/src/components/DisplayNote/note.css
@@ -32,14 +32,14 @@
 .label-pills{
     display: flex;
     justify-content: space-between;
-    align-items: center;
     margin: 1rem 0;
+    gap: 1rem;
 }
 
 .label-pills div{
     display: flex;
+    flex-wrap: wrap;
     gap: 0.2rem;
-    justify-content: center;
     align-items: center;
 }
 
@@ -48,4 +48,5 @@
     background-color: var(--lynx-gray-color);
     border-radius: 1rem;
     padding: 0.2rem 0.4rem;
+    height: fit-content;
 }
