--- a/src/components/Sidebar/sidebar.css
+++ b/src/components/Sidebar/sidebar.css
@@ -5,6 +5,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    overflow-y: auto;
 }
 
 .sidebar .nav-item{
@@ -20,12 +21,12 @@
 
 .user{
     display: flex;
-    gap: 0.3rem;
+    gap: 0.5rem;
     color: var(--text-color);
 }
 
 .user span{
-    width: 12ch;
+    width: 8ch;
 }
 
 .sidebar button{
@@ -52,6 +53,7 @@
         z-index: 20;
         background-color: white;
         border-top: 1px solid var(--lynx-gray-color);
+        height: fit-content;
     }
 
     .sidebar ul{
